--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <button>Run</button>
-    <svg width="2801px" height="1850px" viewBox="0 0 2801 1850" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <svg viewBox="0 0 2801 1850" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
       <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <g id="maze_desktop">
           <g id="maze" fill="#A49D96" fill-rule="nonzero">
@@ -73,9 +73,8 @@
           </g>
           <polyline
             id="solution"
-            stroke="#771D1D"
+            stroke="#7352ad"
             stroke-width="9.2248"
-            opacity="0.3"
             points="882.5 1849.9 882.5 1538.8 694 1538.8 694 1444.6 976.7 1444.6 976.7 1633.1 1165.2 1633.1 1165.2 1538.8 1071 1538.8 1071 1444.6 1353.8 1444.6 1353.8 1256 1165.2 1256 1165.2 1067.5 1259.5 1067.5 1259.5 879 1071 879 1071 973.3 882.5 973.3 882.5 690.5 1070.3 690.5 1070.3 784.8 1353.8 784.8 1353.8 973.3 1636.5 973.3 1636.5 1162.5 1542.3 1162.5 1542.3 1256 1825 1256 1825 1067.5 1730.8 1067.5 1730.8 879 1542.3 879 1542.3 596.2 1824 596.2 1824 690.5 1637 690.5 1637 784.8 1918.2 784.8 1918.2 973.3 2012.2 973.3 2012.2 596.9 1918.2 596.9 1918.2 408.8 2107 408.8 2107 690.9 2388.5 690.9 2388.5 502.9 2200.6 502.9 2200.6 221.1 2294.9 221.1 2294.9 408.8 2577.1 408.8 2577.1 220.2 2800.7 220.2"
           ></polyline>
         </g>
